# TP-Socket

./: CMakeLists.txt
Client HTTP en Mode connecte/: client_http.cpp
Serveur en mode concurrent/: client.cpp  client_fichier.cpp  client_processus.cpp  serveur.cpp  serveur_multi_services.cpp
Transfert de messages en mode connecté/: client.cpp  serveur.cpp
Transfert de messages en mode non connecté/: client.cpp  serveur.cpp
